--- a/hongdo_ros_teleop/package.xml
+++ b/hongdo_ros_teleop/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The hongdo_ros_teleop package</description>
   <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
-  <license>TODO</license
+  <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>rospy</build_depend>
