--- a/hongdo_ros_bringup/package.xml
+++ b/hongdo_ros_bringup/package.xml
@@ -8,32 +8,18 @@
   <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>usb_cam</build_depend>
   <build_depend>message_generation</build_depend>
-
-  <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>nav_msgs</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>tf</build_export_depend>
-  <build_export_depend>usb_cam</build_export_depend>
+  <depend>rospy</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf</depend>
+  <depend>usb_cam</depend>
   <depend>hongdo_ros_description</depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>tf</exec_depend>
-  <exec_depend>usb_cam</exec_depend>  
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rosserial_python</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 </package>
