FIX(metapackage) : Add depend

--- a/hongdo_ros/package.xml
+++ b/hongdo_ros/package.xml
@@ -8,8 +8,13 @@
   <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
-
-
+  <exec_depend>hongdo_ros_bringup</exec_depend>
+  <exec_depend>hongdo_ros_description</exec_depend>
+  <exec_depend>hongdo_ros_gazebo</exec_depend>
+  <exec_depend>hongdo_ros_navigation</exec_depend>
+  <exec_depend>hongdo_ros_slam</exec_depend>
+  <exec_depend>hongdo_ros_teleop</exec_depend>
+  <!-- <exec_depend>hongdo_ros_marker_tracker</exec_depend> -->
   <!-- The export tag contains other, unspecified, tags -->
  <export><metapackage/></export>
 </package>
