--- a/hongdo_ros_bringup/CMakeLists.txt
+++ b/hongdo_ros_bringup/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf
   usb_cam
   hongdo_ros_description
+  hls_lfcd_lds_driver
   message_generation
 )
 
@@ -107,7 +108,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- CATKIN_DEPENDS geometry_msgs nav_msgs rospy sensor_msgs std_msgs tf usb_cam hongdo_ros_description
+ CATKIN_DEPENDS hls_lfcd_lds_driver geometry_msgs nav_msgs rospy sensor_msgs std_msgs tf usb_cam hongdo_ros_description
  
 )
 
