REFACTOR(dynamixel) : Modify yaml launch

--- a/hongdo_ros_dynamixel/dynamixel_workbench_operators/CMakeLists.txt
+++ b/hongdo_ros_dynamixel/dynamixel_workbench_operators/CMakeLists.txt
@@ -70,14 +70,10 @@ add_executable(joint_operator src/joint_operator.cpp)
 add_dependencies(joint_operator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(joint_operator ${catkin_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
-add_executable(wheel_operator src/wheel_operator.cpp)
-add_dependencies(wheel_operator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(wheel_operator ${catkin_LIBRARIES})
-
 #################################################################################
 ## Install
 #################################################################################
-install(TARGETS joint_operator wheel_operator
+install(TARGETS joint_operator
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
