--- a/hongdo_ros_dynamixel/dynamixel_workbench_controllers/config/joint_1_0.yaml
+++ b/hongdo_ros_dynamixel/dynamixel_workbench_controllers/config/joint_1_0.yaml
@@ -3,10 +3,10 @@
 # You are supposed to set at least Dynamixel ID
 # This example is compatible with Dynamixel using protocol 1.0
 pan:
-  ID: 0
+  ID: 1
   Return_Delay_Time: 0
-  CW_Angle_Limit: 0
-  CCW_Angle_Limit: 2048
+  # CW_Angle_Limit: 0
+  # CCW_Angle_Limit: 2048
   #Moving_Speed: 1023
 # tilt:
 #   ID: 2
