--- a/hongdo_ros_bringup/package.xml
+++ b/hongdo_ros_bringup/package.xml
@@ -18,6 +18,9 @@
   <depend>usb_cam</depend>
   <depend>hls_lfcd_lds_driver</depend>
   <depend>hongdo_ros_description</depend>
+  <depend>dynamixel_workbench_controllers</depend>
+  <depend>dynamixel_workbench_operators</depend>
+  <depend>hongdo_ros_obstacle</depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rosserial_python</exec_depend>
