--- a/hongdo_ros_obstacle/CMakeLists.txt
+++ b/hongdo_ros_obstacle/CMakeLists.txt
@@ -102,10 +102,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES hongdo_ros_obstacle
-#  CATKIN_DEPENDS roscpp sensor_msgs
-#  DEPENDS system_lib
+ INCLUDE_DIRS include
+ LIBRARIES hongdo_ros_obstacle
+ CATKIN_DEPENDS roscpp sensor_msgs
 )
 
 ###########
@@ -119,6 +118,13 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+add_executable(hongdo_ros_obstacle src/hongdo_ros_obstacle.cpp)
+target_link_libraries(hongdo_ros_obstacle ${catkin_LIBRARIES})
+add_dependencies(hongdo_ros_obstacle hongdo_ros_obstacle_generate_messages_cpp)
+
+add_executable(hongdo_ros_stop src/hongdo_ros_stop.cpp)
+target_link_libraries(hongdo_ros_stop ${catkin_LIBRARIES})
+add_dependencies(hongdo_ros_stop hongdo_ros_obstacle_generate_messages_cpp)
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/hongdo_ros_obstacle.cpp
@@ -156,40 +162,20 @@ include_directories(
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
+install(TARGETS hongdo_ros_obstacle
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
 
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+install(DIRECTORY launch config
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 
 #############
 ## Testing ##
@@ -204,6 +190,3 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-add_executable(hongdo_ros_obstacle src/hongdo_ros_obstacle.cpp)
-target_link_libraries(hongdo_ros_obstacle ${catkin_LIBRARIES})
-add_dependencies(hongdo_ros_obstacle hongdo_ros_obstacle_generate_messages_cpp)
