--- a/hongdo_ros_web/package.json
+++ b/hongdo_ros_web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rosnodejs_examples",
-  "version": "0.0.0",
+  "name": "rosnodejs",
+  "version": "1.1.1",
   "description": "Example programs for ROS Node Javascript client library",
   "keywords": [
     "ros"
@@ -13,16 +13,21 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/RethinkRobotics-opensource/rosnodejs_examples"
+    "url": "git://github.com/RethinkRobotics-opensource/rosnodejs_examples.git"
   },
   "dependencies": {
-    "MD5": "^1.3.0",
     "express": "^4.18.1",
     "folder": "0.0.4",
     "imgbb-uploader": "^1.5.0",
+    "MD5": "^1.3.0",
     "ros": "^1.0.4",
-    "rosnodejs": "^3.1.0",
+    "rosnodejs": "^0.1.1",
     "tarball": "0.0.5",
     "url": "^0.11.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/RethinkRobotics-opensource/rosnodejs_examples/issues"
+  },
+  "homepage": "https://github.com/RethinkRobotics-opensource/rosnodejs_examples#readme",
+  "main": "index.js"
 }
